--- a/Bab4-Contoh-Navigasi/Bab4_Contoh_Navigasi/FormNavigasi1.xaml
+++ b/Bab4-Contoh-Navigasi/Bab4_Contoh_Navigasi/FormNavigasi1.xaml
@@ -2,9 +2,17 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Bab4_Contoh_Navigasi.FormNavigasi1" Title="Form Navigasi 1">
-    <StackLayout>
-        <Label Text="Parameter 1 :" FontSize="Medium" />
-        <Entry x:Name="txtParameter" Placeholder="insert parameter 1" />
-        <Button x:Name="btnHal2" Text="Ke Halaman 2" />
-    </StackLayout>
+
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Home" Icon="home.png" Order="Primary" x:Name="menuHome" />
+        <ToolbarItem Text="Navigasi 2" Order="Secondary" x:Name="menuNavigasi2" />
+    </ContentPage.ToolbarItems>
+    <ContentPage.Content>
+        <StackLayout>
+            <Label Text="Parameter 1 :" FontSize="Medium" />
+            <Entry x:Name="txtParameter" Placeholder="insert parameter 1" />
+            <Button x:Name="btnHal2" Text="Ke Halaman 2" />
+        </StackLayout>
+     
+    </ContentPage.Content>
 </ContentPage>
