--- a/Bab4-Contoh-Navigasi/Bab4_Contoh_Navigasi/SampleAlertPage.xaml
+++ b/Bab4-Contoh-Navigasi/Bab4_Contoh_Navigasi/SampleAlertPage.xaml
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             
              x:Class="Bab4_Contoh_Navigasi.SampleAlertPage" Title="Alert Page">
-    
+    <StackLayout>
+        <Label Text="DisplayAlert" FontSize="Medium" HorizontalOptions="Center"/>
+        <Button Text="Alert Simple" x:Name="btnAlert" />
+        <Button Text="Alert Yes No" x:Name="btnAlertYesNo" />
+    </StackLayout>
 </ContentPage>
