--- a/Bab4-Contoh-Navigasi/Bab4_Contoh_Navigasi/FormNavigasi2.xaml
+++ b/Bab4-Contoh-Navigasi/Bab4_Contoh_Navigasi/FormNavigasi2.xaml
@@ -11,6 +11,7 @@
             <Button x:Name="btnForm1" Text="Ke Halaman 1" />
 
             <Button x:Name="btnParam" Text="Check Parameter" />
+            <Button x:Name="btnGetAppParam" Text="Get App Param" />
         </StackLayout>
       
     </ContentPage.Content>
