--- a/Bab4-Contoh-Navigasi/Bab4_Contoh_Navigasi/PEBMasterPage.xaml
+++ b/Bab4-Contoh-Navigasi/Bab4_Contoh_Navigasi/PEBMasterPage.xaml
@@ -9,7 +9,7 @@
     <MasterDetailPage.Detail>
         <NavigationPage>
             <x:Arguments>
-                <local:PEBMasterDetailContact />
+                <local:PEBMasterDetailHome />
             </x:Arguments>
         </NavigationPage>
     </MasterDetailPage.Detail>
