--- a/Bab4-Contoh-Navigasi/Bab4_Contoh_Navigasi/PEBMasterDetailHome.xaml
+++ b/Bab4-Contoh-Navigasi/Bab4_Contoh_Navigasi/PEBMasterDetailHome.xaml
@@ -2,4 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Bab4_Contoh_Navigasi.PEBMasterDetailHome" Title="Home">
+    <StackLayout>
+        <Label Text="Home Page" FontSize="Large" />
+    </StackLayout>
 </ContentPage>
